--- a/Portfolio/Portfolio.csproj
+++ b/Portfolio/Portfolio.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Portfolio.DataAccess\Portfolio.DataAccess.csproj" />
       <ProjectReference Include="..\Portfolio.Misc\Portfolio.Misc.csproj" />
     </ItemGroup>
 
