--- a/Portfolio/appsettings.json
+++ b/Portfolio/appsettings.json
@@ -1,16 +1,12 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "DataSource=app.db;Cache=Shared"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  },
-  "EmailConfiguration": {
-    "From": "ahmatowmansur@gmail.com",
-    "SmtpServer": "smtp.gmail.com",
-    "Port": 465,
-    "Username": "ahmatowmansur@gmail.com",
-    "Password": "uprcgsfflwbgwoen"
   },
   "AllowedHosts": "*"
 }
