--- a/Portfolio/appsettings.json
+++ b/Portfolio/appsettings.json
@@ -9,5 +9,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "EmailConfiguration": {
+    "From": "ahmatowmansur@gmail.com",
+    "SmtpServer": "smtp.gmail.com",
+    "Port": 465,
+    "Username": "ahmatowmansur@gmail.com",
+    "Password": "uprcgsfflwbgwoen"
+  },
   "AllowedHosts": "*"
 }
