--- a/testMvc/appsettings.json
+++ b/testMvc/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "MsSqlConnection": "Data Source=localhost;Initial Catalog=test;Integrated Security=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
