--- a/Portfolio/Portfolio.csproj
+++ b/Portfolio/Portfolio.csproj
@@ -36,4 +36,8 @@
       <AdditionalFiles Include="Views\Auth\Register.cshtml" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Pages" />
+    </ItemGroup>
+
 </Project>
